added alternative figure 1

--- a/SMHET.tex
+++ b/SMHET.tex
@@ -210,11 +210,16 @@ the nanocube model, $n, l, m$ for the nanosphere model) so that the orbital ener
 %        - with repitition times
 
 Our model of the Au nanocube has a number of dipole-allowed transitions between 1.3 and 3.3 eV, and
-the Au LSPR has partial overlap with a transition at approximately 2.5 eV (see Figure 1a).  
+the Au LSPR has partial overlap with a transition at approximately 2.5 eV (see Figure 1a).
 The spectral flexibility of dielectric scattering
 resonances allows them to be tuned to overlap with one or more of these transition energies; for example,
-a $d=270nm$ TiO$_2$ NS has a scattering resonance that overlaps with an Au transition at 3.1 eV, and 
+a $d=270nm$ TiO$_2$ NS has a scattering resonance that overlaps with an Au transition at 3.1 eV, and
 a $d=685nm$ TiO$_2$ NS has scattering resonances that overlap with every transition between 1.3 and 3.3 eV.
+As proxies of the hot-carrier dynamics, we plot the population dynamics of the highest and lowest energy orbitals in our active space, which lie
+2.2 eV above and 1.6 eV below the Fermi energy, respectively (Figure 1 (a) and (b)).  Snapshots of the populations of all active
+orbitals at various times are also provided in the supplemental information.  We observe that LSPR the LSPR generates a relatively small
+population of hot-carriers
+and hot-hole generation with field-driven dynamics that evolve on a short (~10 fs) timescale.
 \begin{figure}
 \begin{center}
 \includegraphics[width=6in]{figs/Au_AllThree_Spectrum_and_Trajectories.png}
@@ -226,6 +231,35 @@ the absorption of a 2nm gold nanocube and the scattering of of 270 nm and
 with the dipole-allowed transitions in our quantum mechanical Au NC model.  Both dielectric scattering resonances show more efficient generation of hot-electrons (Panel {\bf (b)} and hot-holes (Panel {\bf (c)}) compared to LSPR in this case.}
 \end{center}
 \end{figure}
+
+
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=6in]{figs/Au_AllThree_Alternate.png}
+\caption{Three regimes for light-matter interactions leading to unique
+spatial and temporal shaping of the incident field, and the corresponding
+impact on electronic dynamics in a Au nanocube. Panel {\bf (a)} shows
+the absorption of a 2nm gold nanocube and the scattering of of 270 nm and
+685 nm TiO$_2$ nanospheres that display predominately Fabry-Perot and Whispering Gallery Mode visible resonances, respectively.  These spectra are overlaid
+with the dipole-allowed transitions in our quantum mechanical Au NC model.  Both dielectric scattering resonances show more efficient generation of hot-electrons (Panel {\bf (b)} and hot-holes (Panel {\bf (c)}) compared to LSPR in this case.}
+\end{center}
+\end{figure}
+
+
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=6in]{figs/Au_AllThree_Alternate2.png}
+\caption{Three regimes for light-matter interactions leading to unique
+spatial and temporal shaping of the incident field, and the corresponding
+impact on electronic dynamics in a Au nanocube. Panel {\bf (a)} shows
+the absorption of a 2nm gold nanocube and the scattering of of 270 nm and
+685 nm TiO$_2$ nanospheres that display predominately Fabry-Perot and Whispering Gallery Mode visible resonances, respectively.  These spectra are overlaid
+with the dipole-allowed transitions in our quantum mechanical Au NC model.  Both dielectric scattering resonances show more efficient generation of hot-electrons (Panel {\bf (b)} and hot-holes (Panel {\bf (c)}) compared to LSPR in this case.}
+\end{center}
+\end{figure}
+
 
 
 \begin{figure}
