Added supplemental figures

--- a/SMHET.tex
+++ b/SMHET.tex
@@ -254,6 +254,25 @@ orbitals and hot-holes in the lowest energy orbitals in our Pt NC model.}
 
 \section{Supplementary Information}
 
+\subsection{Plots of Global Hot-Carrier Distributions}
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=6in]{figs/Au_HotElectronDistribution_Comparison.png}
+\caption{Global image of hot-carrier dynamics in Au nanocrystal.}
+\end{center}
+\end{figure}
+
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=6in]{figs/Pt_HotElectronDistribution_Comparison.png}
+\caption{Global image of hot-carrier dynamics in Pt nanocrystal.}
+\end{center}
+\end{figure}
+
+
+
 %\subsection{Time-dependent configuration-interaction singles method}
 %We use the time-dependent configuration interaction singles (TD-CIS) method to elucidate the
 %electronic dynamics in the metal nanoparticles driven by the electric fields resulting from 
